--- a/index.html
+++ b/index.html
@@ -2,24 +2,34 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Social Slides</title>
+	<title>AYGIT | Antalya Yazılım Geliştiricileri ve İletişim Tasarımcıları Topluluğu</title>
 	<link rel="stylesheet" href="social-slide.css">
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700,500' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	<div id="container">
+		<logo>AYGIT.</logo><br />
+		<description>Antalya Yazılım Geliştiricileri ve İletişim Tasarımcıları</description>
+		<p>
+			<strong>Amaç Nedir?</strong> Aynı dilden konuştuğumuz insanlarla tanışmak, paylaşımda bulunmak. <br />
+			<strong>Ne Yapar?</strong> Düzenli bir araya gelir. Workshoplar düzenler. Eğitimler Düzenler. Podcast hazırlar. İlde teknoloji ihtiyacı olan ve bütçesi olmayan tüzel kişilere yardımcı olur. Danışmanlık verir. <br />
+			Etkinlikler için sosyal kanallarımızı takip edin.
+		</p>
+	</div>
+
 	<section>
 		<div class="social-share fb">
 			<span class="fb-inner"></span>
-			<a class="cta fb" href="#">Like</a>
+			<a class="cta fb" href="http://www.facebook.com/groups/aygit/" target="_blank">Grup</a>
 		</div>
 		<div class="social-share tw">
 			<span class="tw-inner"></span>
-			<a class="cta tw" href="#">Tweet</a>
+			<a class="cta tw" href="http://twitter.com/aygit_org" target="_blank">Haber</a>
 		</div>
 	</section>
 	<section class="credit">
-		<p>Code by <a href="http://twitter.com/vsxed" class="credit-link">Eduard Mayer</a></p>
-		<p>Designed by <a href="http://drbl.in/gWdz" class="credit-link">@calebbritton</a></p>
-		<a href="https://github.com/vsxed/Social-Slides" class="credit-link button">Fork it on Github</a>
+		<p>Ne Kadar Basit <a href="http://kodumunwebsitesi.net" target="_blank" class="credit-link">O Kadar İyi</a><small> (+12)</small></p>
+		<a href="https://github.com/mehmetkose/aygit.org" class="credit-link button" target="_blank">Fork it on Github</a>
 	</section>
 </body>
 </html>
